# llvm-meta-meetup

./: .codespellrc  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: metaConfig.cmake.in  metaToolchain.cmake
cmake/modules/: meta-format.cmake  meta-llvm.cmake  meta-target-util.cmake
lib/: CMakeLists.txt
lib/pass/: CMakeLists.txt  MetaPass.cpp  MetaPass.h
lib/type/: DIVisitor.h
script/: CMakeLists.txt  apply.tmpl
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/pass/: stack_basic_array.c  stack_basic_int.c  stack_basic_typedef.c  stack_struct_basic.c  stack_struct_recursion.c
